# dynamic-ctm

./: main.py  pyproject.toml
models/: bio_modules.py  constants.py  ctm_bio.py
tasks/bio_experiments/: analyze_results.py  detailed_results_analysis.py  run_ablation.sh  run_ablation_parallel.sh  train.py
