[project]
name = "dynamic-ctm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autoclip>=0.2.1",
    "datasets>=4.4.2",
    "gymnasium>=1.2.3",
    "huggingface-hub>=1.2.3",
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "minigrid>=3.0.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.2.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]
